Add section: save csv files

--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "9488d9a5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "id": "182c3402",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "c453e158",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "62425132",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "962b51fe",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "4  5371;1989;Graduation;Single;21474;1;0;8/4/2014...                                                                                                                                                                                                                             "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "cd394002",
    "metadata": {},
    "outputs": [],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "id": "5c26e8ca",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "44ea8907",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "0d619f2d",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
        "[2240 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "id": "460ca03e",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        "[2240 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,9 +1057,316 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f64b4a5",
+   "metadata": {},
+   "source": [
+    "### **Escribir archivos CSV**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2217106f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar datos csv\n",
+    "datos_seleccion.to_csv('Data/clientes_mercado.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c11ffcdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Year_Birth</th>\n",
+       "      <th>Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1826</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>84835.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>57091.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>10476</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>67267.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1386</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>32474.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5371</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>21474.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2235</th>\n",
+       "      <td>2235</td>\n",
+       "      <td>10142</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>66476.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2236</th>\n",
+       "      <td>2236</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>31056.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2237</th>\n",
+       "      <td>2237</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>46310.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2238</th>\n",
+       "      <td>2238</td>\n",
+       "      <td>528</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>65819.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2239</th>\n",
+       "      <td>2239</td>\n",
+       "      <td>4070</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>94871.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2240 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0     Id  Year_Birth   Income\n",
+       "0              0   1826        1970  84835.0\n",
+       "1              1      1        1961  57091.0\n",
+       "2              2  10476        1958  67267.0\n",
+       "3              3   1386        1967  32474.0\n",
+       "4              4   5371        1989  21474.0\n",
+       "...          ...    ...         ...      ...\n",
+       "2235        2235  10142        1976  66476.0\n",
+       "2236        2236   5263        1977  31056.0\n",
+       "2237        2237     22        1976  46310.0\n",
+       "2238        2238    528        1978  65819.0\n",
+       "2239        2239   4070        1969  94871.0\n",
+       "\n",
+       "[2240 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Leer el archivo guardado\n",
+    "clientes_mercado = pd.read_csv('Data/clientes_mercado.csv')\n",
+    "clientes_mercado\n",
+    "# Seguarda con una columna de indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "6a2fba1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar datos csv sin los indices\n",
+    "datos_seleccion.to_csv('Data/clientes_mercado.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "83603b8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Year_Birth</th>\n",
+       "      <th>Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1826</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>84835.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>57091.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10476</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>67267.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1386</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>32474.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5371</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>21474.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2235</th>\n",
+       "      <td>10142</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>66476.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2236</th>\n",
+       "      <td>5263</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>31056.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2237</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>46310.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2238</th>\n",
+       "      <td>528</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>65819.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2239</th>\n",
+       "      <td>4070</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>94871.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2240 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Id  Year_Birth   Income\n",
+       "0      1826        1970  84835.0\n",
+       "1         1        1961  57091.0\n",
+       "2     10476        1958  67267.0\n",
+       "3      1386        1967  32474.0\n",
+       "4      5371        1989  21474.0\n",
+       "...     ...         ...      ...\n",
+       "2235  10142        1976  66476.0\n",
+       "2236   5263        1977  31056.0\n",
+       "2237     22        1976  46310.0\n",
+       "2238    528        1978  65819.0\n",
+       "2239   4070        1969  94871.0\n",
+       "\n",
+       "[2240 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Leer el archivo guardado sin los indices\n",
+    "datos_mercado = pd.read_csv('Data/clientes_mercado.csv')\n",
+    "datos_mercado"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2217106f",
+   "id": "eda7eb0a",
    "metadata": {},
    "outputs": [],
    "source": []
