Adding files to classroom 2 - Reading Excel files

--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -1061,7 +1061,7 @@
    "id": "9f64b4a5",
    "metadata": {},
    "source": [
-    "### **Escribir archivos CSV**"
+    "## **Escribir archivos CSV**"
    ]
   },
   {
@@ -1361,6 +1361,14 @@
     "# Leer el archivo guardado sin los indices\n",
     "datos_mercado = pd.read_csv('Data/clientes_mercado.csv')\n",
     "datos_mercado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9104c6f",
+   "metadata": {},
+   "source": [
+    "# **Aula 2 - Leyendo archivos Excel**"
    ]
   },
   {
