--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -1372,9 +1372,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6abdb11",
+   "metadata": {},
+   "source": [
+    "## **Importando archivos Excel**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "eda7eb0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2f9e3146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo = 'Data/emisiones_CO2.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "5e863627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_co2 = pd.read_excel(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "f6d4156f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>País</th>\n",
+       "      <th>ISO 3166-1 alpha-3</th>\n",
+       "      <th>Año</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Carbón</th>\n",
+       "      <th>Aceite</th>\n",
+       "      <th>Gas</th>\n",
+       "      <th>Cemento</th>\n",
+       "      <th>Quema</th>\n",
+       "      <th>Otros</th>\n",
+       "      <th>Per Capita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afganistán</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>1750</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afganistán</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>1751</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afganistán</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>1752</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afganistán</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>1753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afganistán</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>1754</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         País ISO 3166-1 alpha-3   Año  Total  Carbón  Aceite  Gas  Cemento  \\\n",
+       "0  Afganistán                AFG  1750    0.0     NaN     NaN  NaN      NaN   \n",
+       "1  Afganistán                AFG  1751    0.0     NaN     NaN  NaN      NaN   \n",
+       "2  Afganistán                AFG  1752    0.0     NaN     NaN  NaN      NaN   \n",
+       "3  Afganistán                AFG  1753    0.0     NaN     NaN  NaN      NaN   \n",
+       "4  Afganistán                AFG  1754    0.0     NaN     NaN  NaN      NaN   \n",
+       "\n",
+       "   Quema  Otros  Per Capita  \n",
+       "0    NaN    NaN         NaN  \n",
+       "1    NaN    NaN         NaN  \n",
+       "2    NaN    NaN         NaN  \n",
+       "3    NaN    NaN         NaN  \n",
+       "4    NaN    NaN         NaN  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_co2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c4b90df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emisiones_C02', 'emisiones_percapita', 'fuentes']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.ExcelFile(archivo).sheet_names"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda7eb0a",
+   "id": "03140e68",
    "metadata": {},
    "outputs": [],
    "source": []
