--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -3057,9 +3057,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edc4acc4",
+   "metadata": {},
+   "source": [
+    "## **Aula 3 - Leyendo archivos JSON**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e1603b3",
+   "metadata": {},
+   "source": [
+    "### **Importando archivos JSON**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "baa635a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3256b72a",
    "metadata": {},
    "outputs": [],
    "source": []
