Add section: Normalizing JSON files

--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -3074,7 +3074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "id": "baa635a8",
    "metadata": {},
    "outputs": [],
@@ -3084,7 +3084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 3,
    "id": "3256b72a",
    "metadata": {},
    "outputs": [],
@@ -3095,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "id": "f03b62ae",
    "metadata": {},
    "outputs": [
@@ -3445,7 +3445,7 @@
        "[1000 rows x 19 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3456,7 +3456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 5,
    "id": "557ce61b",
    "metadata": {},
    "outputs": [],
@@ -3468,7 +3468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "id": "96a872cb",
    "metadata": {},
    "outputs": [
@@ -3533,7 +3533,7 @@
        "2  {'ID': '03', 'Rango_edad': '65-69', 'Sexo_biol...  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3552,19 +3552,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "900f672b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Indicamos donde se encuentra la informacion anidada, en este caso en la columna 'Pacientes'\n",
+    "df_normalizado = pd.json_normalize(datos_pacientes_2['Pacientes'])\n",
+    "#Estos lee de forma correcta sin importar cuanta informacion este anidada"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cf82a163",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Rango_edad</th>\n",
+       "      <th>Sexo_biologico</th>\n",
+       "      <th>Raza</th>\n",
+       "      <th>IMC</th>\n",
+       "      <th>Fumador</th>\n",
+       "      <th>Consumo_alcohol</th>\n",
+       "      <th>Salud_física</th>\n",
+       "      <th>Salud_mental</th>\n",
+       "      <th>Dificultad_caminar</th>\n",
+       "      <th>Actividad_física</th>\n",
+       "      <th>Salud_general</th>\n",
+       "      <th>Horas_sueño</th>\n",
+       "      <th>Problemas_salud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01</td>\n",
+       "      <td>55-59</td>\n",
+       "      <td>Mujer</td>\n",
+       "      <td>Blanca</td>\n",
+       "      <td>16.60</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Muy buena</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[Diabetes, Asma, Cancer_piel]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>02</td>\n",
+       "      <td>80 ó +</td>\n",
+       "      <td>Mujer</td>\n",
+       "      <td>Blanca</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Muy buena</td>\n",
+       "      <td>7</td>\n",
+       "      <td>[AVC]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03</td>\n",
+       "      <td>65-69</td>\n",
+       "      <td>Masculino</td>\n",
+       "      <td>Blanca</td>\n",
+       "      <td>26.58</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>No</td>\n",
+       "      <td>20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sí</td>\n",
+       "      <td>Muy buena</td>\n",
+       "      <td>8</td>\n",
+       "      <td>[Diabetes, Asma]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID Rango_edad Sexo_biologico    Raza    IMC Fumador Consumo_alcohol  \\\n",
+       "0  01      55-59          Mujer  Blanca  16.60      Sí              No   \n",
+       "1  02     80 ó +          Mujer  Blanca  20.34      No              No   \n",
+       "2  03      65-69      Masculino  Blanca  26.58      Sí              No   \n",
+       "\n",
+       "   Salud_física  Salud_mental Dificultad_caminar Actividad_física  \\\n",
+       "0             3            30                 No               Sí   \n",
+       "1             0             0                 No               Sí   \n",
+       "2            20            30                 No               Sí   \n",
+       "\n",
+       "  Salud_general  Horas_sueño                Problemas_salud  \n",
+       "0     Muy buena            5  [Diabetes, Asma, Cancer_piel]  \n",
+       "1     Muy buena            7                          [AVC]  \n",
+       "2     Muy buena            8               [Diabetes, Asma]  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_normalizado"
+   ]
   },
   {
    "cell_type": "code",
