--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -4989,17 +4989,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "265d7727",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Guardando la tabla obtenida del archivo HTML a un archivo CSV\n",
     "top_peliculas.to_csv('Data/top_peliculas_1998.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "cd8dc40c",
    "metadata": {},
    "outputs": [
@@ -5072,97 +5073,386 @@
        "      <td>Horizon Pictures</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>The Searchers</td>\n",
-       "      <td>1956</td>\n",
-       "      <td>John Ford</td>\n",
-       "      <td>C. V. Whitney Pictures</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Bringing Up Baby</td>\n",
-       "      <td>1938</td>\n",
-       "      <td>Howard Hawks</td>\n",
-       "      <td>RKO Radio Pictures</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Unforgiven</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>Clint Eastwood</td>\n",
-       "      <td>The Malpaso Company</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Guess Who's Coming to Dinner</td>\n",
-       "      <td>1967</td>\n",
-       "      <td>Stanley Kramer</td>\n",
-       "      <td>Columbia Pictures</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Yankee Doodle Dandy</td>\n",
-       "      <td>1942</td>\n",
-       "      <td>Michael Curtiz</td>\n",
-       "      <td>Warner Bros. Pictures</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Film  Release year              Director  \\\n",
-       "0                   Citizen Kane          1941          Orson Welles   \n",
-       "1                     Casablanca          1942        Michael Curtiz   \n",
-       "2                  The Godfather          1972  Francis Ford Coppola   \n",
-       "3             Gone with the Wind          1939        Victor Fleming   \n",
-       "4             Lawrence of Arabia          1962            David Lean   \n",
-       "..                           ...           ...                   ...   \n",
-       "95                 The Searchers          1956             John Ford   \n",
-       "96              Bringing Up Baby          1938          Howard Hawks   \n",
-       "97                    Unforgiven          1992        Clint Eastwood   \n",
-       "98  Guess Who's Coming to Dinner          1967        Stanley Kramer   \n",
-       "99           Yankee Doodle Dandy          1942        Michael Curtiz   \n",
+       "                 Film  Release year              Director  \\\n",
+       "0        Citizen Kane          1941          Orson Welles   \n",
+       "1          Casablanca          1942        Michael Curtiz   \n",
+       "2       The Godfather          1972  Francis Ford Coppola   \n",
+       "3  Gone with the Wind          1939        Victor Fleming   \n",
+       "4  Lawrence of Arabia          1962            David Lean   \n",
        "\n",
-       "                      Production companies  Rank  \n",
-       "0                       RKO Radio Pictures     1  \n",
-       "1                    Warner Bros. Pictures     2  \n",
-       "2   Paramount Pictures, Alfran Productions     3  \n",
-       "3          Selznick International Pictures     4  \n",
-       "4                         Horizon Pictures     5  \n",
-       "..                                     ...   ...  \n",
-       "95                  C. V. Whitney Pictures    96  \n",
-       "96                      RKO Radio Pictures    97  \n",
-       "97                     The Malpaso Company    98  \n",
-       "98                       Columbia Pictures    99  \n",
-       "99                   Warner Bros. Pictures   100  \n",
-       "\n",
-       "[100 rows x 5 columns]"
+       "                     Production companies  Rank  \n",
+       "0                      RKO Radio Pictures     1  \n",
+       "1                   Warner Bros. Pictures     2  \n",
+       "2  Paramount Pictures, Alfran Productions     3  \n",
+       "3         Selznick International Pictures     4  \n",
+       "4                        Horizon Pictures     5  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('Data/top_peliculas_1998.csv')"
+    "datos = pd.read_csv('Data/top_peliculas_1998.csv')\n",
+    "datos.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f39ef8",
+   "metadata": {},
+   "source": [
+    "### **Leyendo/Escribiendo archivos XML**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1a5d0cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c43ed1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_imdb = pd.read_xml('Data/imdb_top_1000.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "d6c0753c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Poster_Link</th>\n",
+       "      <th>Series_Title</th>\n",
+       "      <th>Released_Year</th>\n",
+       "      <th>Certificate</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>Overview</th>\n",
+       "      <th>Meta_score</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Star1</th>\n",
+       "      <th>Star2</th>\n",
+       "      <th>Star3</th>\n",
+       "      <th>Star4</th>\n",
+       "      <th>No_of_Votes</th>\n",
+       "      <th>Gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMDFkYT...</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>A</td>\n",
+       "      <td>142 min</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Two imprisoned men bond over a number of years...</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Frank Darabont</td>\n",
+       "      <td>Tim Robbins</td>\n",
+       "      <td>Morgan Freeman</td>\n",
+       "      <td>Bob Gunton</td>\n",
+       "      <td>William Sadler</td>\n",
+       "      <td>2343110</td>\n",
+       "      <td>28,341,469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BM2MyNj...</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>A</td>\n",
+       "      <td>175 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>An organized crime dynasty's aging patriarch t...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Marlon Brando</td>\n",
+       "      <td>Al Pacino</td>\n",
+       "      <td>James Caan</td>\n",
+       "      <td>Diane Keaton</td>\n",
+       "      <td>1620367</td>\n",
+       "      <td>134,966,411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMTMxNT...</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>152 min</td>\n",
+       "      <td>Action, Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>Christian Bale</td>\n",
+       "      <td>Heath Ledger</td>\n",
+       "      <td>Aaron Eckhart</td>\n",
+       "      <td>Michael Caine</td>\n",
+       "      <td>2303232</td>\n",
+       "      <td>534,858,444</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                        Poster_Link  \\\n",
+       "0      0  https://m.media-amazon.com/images/M/MV5BMDFkYT...   \n",
+       "1      1  https://m.media-amazon.com/images/M/MV5BM2MyNj...   \n",
+       "2      2  https://m.media-amazon.com/images/M/MV5BMTMxNT...   \n",
+       "\n",
+       "               Series_Title Released_Year Certificate  Runtime  \\\n",
+       "0  The Shawshank Redemption          1994           A  142 min   \n",
+       "1             The Godfather          1972           A  175 min   \n",
+       "2           The Dark Knight          2008          UA  152 min   \n",
+       "\n",
+       "                  Genre  IMDB_Rating  \\\n",
+       "0                 Drama          9.3   \n",
+       "1          Crime, Drama          9.2   \n",
+       "2  Action, Crime, Drama          9.0   \n",
+       "\n",
+       "                                            Overview  Meta_score  \\\n",
+       "0  Two imprisoned men bond over a number of years...        80.0   \n",
+       "1  An organized crime dynasty's aging patriarch t...       100.0   \n",
+       "2  When the menace known as the Joker wreaks havo...        84.0   \n",
+       "\n",
+       "               Director           Star1           Star2          Star3  \\\n",
+       "0        Frank Darabont     Tim Robbins  Morgan Freeman     Bob Gunton   \n",
+       "1  Francis Ford Coppola   Marlon Brando       Al Pacino     James Caan   \n",
+       "2     Christopher Nolan  Christian Bale    Heath Ledger  Aaron Eckhart   \n",
+       "\n",
+       "            Star4  No_of_Votes        Gross  \n",
+       "0  William Sadler      2343110   28,341,469  \n",
+       "1    Diane Keaton      1620367  134,966,411  \n",
+       "2   Michael Caine      2303232  534,858,444  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_imdb.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "3891132b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_imdb.to_xml('Data/peliculas_imdb.xml', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "90a5a556",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Poster_Link</th>\n",
+       "      <th>Series_Title</th>\n",
+       "      <th>Released_Year</th>\n",
+       "      <th>Certificate</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>Overview</th>\n",
+       "      <th>Meta_score</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Star1</th>\n",
+       "      <th>Star2</th>\n",
+       "      <th>Star3</th>\n",
+       "      <th>Star4</th>\n",
+       "      <th>No_of_Votes</th>\n",
+       "      <th>Gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMDFkYT...</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>A</td>\n",
+       "      <td>142 min</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Two imprisoned men bond over a number of years...</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Frank Darabont</td>\n",
+       "      <td>Tim Robbins</td>\n",
+       "      <td>Morgan Freeman</td>\n",
+       "      <td>Bob Gunton</td>\n",
+       "      <td>William Sadler</td>\n",
+       "      <td>2343110</td>\n",
+       "      <td>28,341,469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BM2MyNj...</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>A</td>\n",
+       "      <td>175 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>An organized crime dynasty's aging patriarch t...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Marlon Brando</td>\n",
+       "      <td>Al Pacino</td>\n",
+       "      <td>James Caan</td>\n",
+       "      <td>Diane Keaton</td>\n",
+       "      <td>1620367</td>\n",
+       "      <td>134,966,411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMTMxNT...</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>152 min</td>\n",
+       "      <td>Action, Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>Christian Bale</td>\n",
+       "      <td>Heath Ledger</td>\n",
+       "      <td>Aaron Eckhart</td>\n",
+       "      <td>Michael Caine</td>\n",
+       "      <td>2303232</td>\n",
+       "      <td>534,858,444</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                        Poster_Link  \\\n",
+       "0      0  https://m.media-amazon.com/images/M/MV5BMDFkYT...   \n",
+       "1      1  https://m.media-amazon.com/images/M/MV5BM2MyNj...   \n",
+       "2      2  https://m.media-amazon.com/images/M/MV5BMTMxNT...   \n",
+       "\n",
+       "               Series_Title Released_Year Certificate  Runtime  \\\n",
+       "0  The Shawshank Redemption          1994           A  142 min   \n",
+       "1             The Godfather          1972           A  175 min   \n",
+       "2           The Dark Knight          2008          UA  152 min   \n",
+       "\n",
+       "                  Genre  IMDB_Rating  \\\n",
+       "0                 Drama          9.3   \n",
+       "1          Crime, Drama          9.2   \n",
+       "2  Action, Crime, Drama          9.0   \n",
+       "\n",
+       "                                            Overview  Meta_score  \\\n",
+       "0  Two imprisoned men bond over a number of years...        80.0   \n",
+       "1  An organized crime dynasty's aging patriarch t...       100.0   \n",
+       "2  When the menace known as the Joker wreaks havo...        84.0   \n",
+       "\n",
+       "               Director           Star1           Star2          Star3  \\\n",
+       "0        Frank Darabont     Tim Robbins  Morgan Freeman     Bob Gunton   \n",
+       "1  Francis Ford Coppola   Marlon Brando       Al Pacino     James Caan   \n",
+       "2     Christopher Nolan  Christian Bale    Heath Ledger  Aaron Eckhart   \n",
+       "\n",
+       "            Star4  No_of_Votes        Gross  \n",
+       "0  William Sadler      2343110   28,341,469  \n",
+       "1    Diane Keaton      1620367  134,966,411  \n",
+       "2   Michael Caine      2303232  534,858,444  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dato_xml = pd.read_xml('Data/peliculas_imdb.xml')\n",
+    "dato_xml.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b9973c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
