--- a/Pandas E-S/pandas_I_O.ipynb
+++ b/Pandas E-S/pandas_I_O.ipynb
@@ -2189,7 +2189,7 @@
    "id": "21ce3ff8",
    "metadata": {},
    "source": [
-    "### **Escribiendo archivos Excel**"
+    "## **Escribiendo archivos Excel**"
    ]
   },
   {
@@ -2349,7 +2349,7 @@
    "id": "4aeb5fd4",
    "metadata": {},
    "source": [
-    "### **Leyendo datos de Google Sheets**"
+    "## **Leyendo datos de Google Sheets**"
    ]
   },
   {
@@ -3061,7 +3061,7 @@
    "id": "edc4acc4",
    "metadata": {},
    "source": [
-    "## **Aula 3 - Leyendo archivos JSON**"
+    "# **Aula 3 - Leyendo archivos JSON**"
    ]
   },
   {
@@ -3069,7 +3069,7 @@
    "id": "6e1603b3",
    "metadata": {},
    "source": [
-    "### **Importando archivos JSON**"
+    "## **Importando archivos JSON**"
    ]
   },
   {
@@ -3547,7 +3547,7 @@
    "id": "e499a5a8",
    "metadata": {},
    "source": [
-    "### **Normalizando archivos JSON**"
+    "## **Normalizando archivos JSON**"
    ]
   },
   {
@@ -3692,7 +3692,7 @@
    "id": "a55c5bc8",
    "metadata": {},
    "source": [
-    "#### **Normalizacion Json Tabla completa**"
+    "### **Normalizacion Json Tabla completa**"
    ]
   },
   {
@@ -3849,7 +3849,7 @@
    "id": "eb9bdc42",
    "metadata": {},
    "source": [
-    "### **Escribiendo archivos JSON**"
+    "## **Escribiendo archivos JSON**"
    ]
   },
   {
@@ -3992,7 +3992,7 @@
    "id": "87d9b598",
    "metadata": {},
    "source": [
-    "### **Leyendo datos JSON a traves de APIs**"
+    "## **Leyendo datos JSON a traves de APIs**"
    ]
   },
   {
@@ -4602,7 +4602,7 @@
    "id": "6bc153e2",
    "metadata": {},
    "source": [
-    "## **Aula 4 - Leyendo paginas HTML y XML**"
+    "# **Aula 4 - Leyendo paginas HTML y XML**"
    ]
   },
   {
@@ -4610,7 +4610,7 @@
    "id": "16225306",
    "metadata": {},
    "source": [
-    "### **Importando pagina web**"
+    "## **Importando pagina web**"
    ]
   },
   {
@@ -4927,7 +4927,7 @@
    "id": "ed01ac7c",
    "metadata": {},
    "source": [
-    "### **Escribiendo archivos HTML**"
+    "## **Escribiendo archivos HTML**"
    ]
   },
   {
@@ -5108,7 +5108,7 @@
    "id": "94f39ef8",
    "metadata": {},
    "source": [
-    "### **Leyendo/Escribiendo archivos XML**"
+    "## **Leyendo/Escribiendo archivos XML**"
    ]
   },
   {
@@ -5447,12 +5447,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8dce04b2",
+   "metadata": {},
+   "source": [
+    "### **Leer una tabla online**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b9973c",
+   "id": "93dfa353",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Para leer un archivo HTML que se encuentra en la red solo se coloca el link en la funcion read_html()\n",
+    "Datos_HTML_online = pd.read_html('https://es.wikipedia.org/wiki/Anexo:Pa%C3%ADses_y_territorios_dependientes_por_poblaci%C3%B3n')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "a707a452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N.º</th>\n",
+       "      <th>País (o territorio dependiente)</th>\n",
+       "      <th>Proyección exponencial de la población al 1/7/2025[7]​</th>\n",
+       "      <th>Total mun- dial (%)</th>\n",
+       "      <th>Cambio medio anual (%)[8]​</th>\n",
+       "      <th>Cambio absoluto anual promedio</th>\n",
+       "      <th>Cambio medio abs. total anual (%)</th>\n",
+       "      <th>Años para even- tual du- pli- ca- ción[9]​</th>\n",
+       "      <th>Censo más reciente, última estimación oficial, proyección de la ONU o reloj de población nacional</th>\n",
+       "      <th>Fecha de esta última cifra de población en particular (d/mm/aaaa)[10]​</th>\n",
+       "      <th>Tipo[11]​</th>\n",
+       "      <th>Enlace o hipervínculo (usualmente de tipo oficial) de esta última cifra de población</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>India</td>\n",
+       "      <td>1 417 492 000</td>\n",
+       "      <td>1753</td>\n",
+       "      <td>090</td>\n",
+       "      <td>12 692 000</td>\n",
+       "      <td>1521</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1 417 492 000</td>\n",
+       "      <td>1/07/2025</td>\n",
+       "      <td>A</td>\n",
+       "      <td>web.archive.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>China[12]​</td>\n",
+       "      <td>1 407 934 000</td>\n",
+       "      <td>1741</td>\n",
+       "      <td>-005</td>\n",
+       "      <td>-1 390 000</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1 408 280 000</td>\n",
+       "      <td>31/12/2024</td>\n",
+       "      <td>E</td>\n",
+       "      <td>www.stats.gov.cn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Estados Unidos</td>\n",
+       "      <td>342 181 000</td>\n",
+       "      <td>423</td>\n",
+       "      <td>061</td>\n",
+       "      <td>2 084 000</td>\n",
+       "      <td>250</td>\n",
+       "      <td>114</td>\n",
+       "      <td>341 874 000</td>\n",
+       "      <td>1/06/2025</td>\n",
+       "      <td>R</td>\n",
+       "      <td>www.census.gov</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  N.º País (o territorio dependiente)  \\\n",
+       "0   1                           India   \n",
+       "1   2                      China[12]​   \n",
+       "2   3                  Estados Unidos   \n",
+       "\n",
+       "  Proyección exponencial de la población al 1/7/2025[7]​ Total mun- dial (%)  \\\n",
+       "0                                      1 417 492 000                    1753   \n",
+       "1                                      1 407 934 000                    1741   \n",
+       "2                                        342 181 000                     423   \n",
+       "\n",
+       "  Cambio medio anual (%)[8]​ Cambio absoluto anual promedio  \\\n",
+       "0                        090                     12 692 000   \n",
+       "1                       -005                     -1 390 000   \n",
+       "2                        061                      2 084 000   \n",
+       "\n",
+       "  Cambio medio abs. total anual (%)  \\\n",
+       "0                              1521   \n",
+       "1                                 -   \n",
+       "2                               250   \n",
+       "\n",
+       "  Años para even- tual du- pli- ca- ción[9]​  \\\n",
+       "0                                         78   \n",
+       "1                                          -   \n",
+       "2                                        114   \n",
+       "\n",
+       "  Censo más reciente, última estimación oficial, proyección de la ONU o reloj de población nacional  \\\n",
+       "0                                      1 417 492 000                                                  \n",
+       "1                                      1 408 280 000                                                  \n",
+       "2                                        341 874 000                                                  \n",
+       "\n",
+       "  Fecha de esta última cifra de población en particular (d/mm/aaaa)[10]​  \\\n",
+       "0                                          1/07/2025                       \n",
+       "1                                         31/12/2024                       \n",
+       "2                                          1/06/2025                       \n",
+       "\n",
+       "  Tipo[11]​  \\\n",
+       "0         A   \n",
+       "1         E   \n",
+       "2         R   \n",
+       "\n",
+       "  Enlace o hipervínculo (usualmente de tipo oficial) de esta última cifra de población  \n",
+       "0                                    web.archive.org                                    \n",
+       "1                                   www.stats.gov.cn                                    \n",
+       "2                                     www.census.gov                                    "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Se debe de tener en cuenta que la pagina puede cambiar debido a actualizaciones de esta\n",
+    "Datos_HTML_online.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a34ba613",
+   "metadata": {},
+   "source": [
+    "# **Aula 5 - Leyando banco de datos**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14b168da",
+   "metadata": {},
+   "source": [
+    "## **Creando un banco de datos local**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113f1d03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importar la biblioteca para crear un bancos de datos local\n",
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d2c2fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importar los metodos\n",
+    "# creat_engin para crear el motor del banco de datos\n",
+    "# MetaData para poder guardar las tablas y sus atributos (columas, filas, nombres, etc)\n",
+    "# Table para acceder y consultar las tablas\n",
+    "# inspec para inspeccionar el baco de datos, saber que tablas hay, que atributos tienen las tablas, etc\n",
+    "# text para convertir querys a texto que se entienda mas facilmente \n",
+    "from sqlalchemy import create_engine, MetaData, Table, inspect, text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed34f4cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear el motor de datos, el tipo sqlite y se ejecuta en memoria, se referencia en la variable engine\n",
+    "engine = create_engine('sqlite: ///:memory')"
+   ]
   }
  ],
  "metadata": {
