Add section: Text data

--- a/Pandas_Transformacion_Manipulacion_Datos/Pandas_Tratamiento_Manipulacion_datos.ipynb
+++ b/Pandas_Transformacion_Manipulacion_Datos/Pandas_Tratamiento_Manipulacion_datos.ipynb
@@ -1202,9 +1202,485 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1f6a67fa",
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a6667a14",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>evaluacion_general</th>\n",
+       "      <th>experiencia_local</th>\n",
+       "      <th>max_hospedes</th>\n",
+       "      <th>descripcion_local</th>\n",
+       "      <th>descripcion_vecindad</th>\n",
+       "      <th>cantidad_baños</th>\n",
+       "      <th>cantidad_cuartos</th>\n",
+       "      <th>cantidad_camas</th>\n",
+       "      <th>modelo_cama</th>\n",
+       "      <th>comodidades</th>\n",
+       "      <th>cuota_deposito</th>\n",
+       "      <th>cuota_limpieza</th>\n",
+       "      <th>precio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>This clean and comfortable one bedroom sits ri...</td>\n",
+       "      <td>Lower Queen Anne is near the Seattle Center (s...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>{Internet,\"Wireless Internet\",Kitchen,\"Free Pa...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Our century old Upper Queen Anne house is loca...</td>\n",
+       "      <td>Upper Queen Anne is a really pleasant, unique ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futon</td>\n",
+       "      <td>{TV,Internet,\"Wireless Internet\",Kitchen,\"Free...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cozy room in two-bedroom apartment along the l...</td>\n",
+       "      <td>The convenience of being in Seattle but on the...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futon</td>\n",
+       "      <td>{TV,Internet,\"Wireless Internet\",Kitchen,\"Free...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Very lovely and cozy room for one. Convenientl...</td>\n",
+       "      <td>Ballard is lovely, vibrant and one of the most...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pull-out Sofa</td>\n",
+       "      <td>{Internet,\"Wireless Internet\",Kitchen,\"Free Pa...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The “Studio at Mibbett Hollow' is in a Beautif...</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>{\"Wireless Internet\",Kitchen,\"Free Parking on ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   evaluacion_general experiencia_local  max_hospedes  \\\n",
+       "0                10.0                --             1   \n",
+       "1                10.0                --             1   \n",
+       "2                10.0                --             1   \n",
+       "3                10.0                --             1   \n",
+       "4                10.0                --             1   \n",
+       "\n",
+       "                                   descripcion_local  \\\n",
+       "0  This clean and comfortable one bedroom sits ri...   \n",
+       "1  Our century old Upper Queen Anne house is loca...   \n",
+       "2  Cozy room in two-bedroom apartment along the l...   \n",
+       "3  Very lovely and cozy room for one. Convenientl...   \n",
+       "4  The “Studio at Mibbett Hollow' is in a Beautif...   \n",
+       "\n",
+       "                                descripcion_vecindad  cantidad_baños  \\\n",
+       "0  Lower Queen Anne is near the Seattle Center (s...               1   \n",
+       "1  Upper Queen Anne is a really pleasant, unique ...               1   \n",
+       "2  The convenience of being in Seattle but on the...               1   \n",
+       "3  Ballard is lovely, vibrant and one of the most...               1   \n",
+       "4                                                 --               1   \n",
+       "\n",
+       "   cantidad_cuartos  cantidad_camas    modelo_cama  \\\n",
+       "0                 1               1       Real Bed   \n",
+       "1                 1               1          Futon   \n",
+       "2                 1               1          Futon   \n",
+       "3                 1               1  Pull-out Sofa   \n",
+       "4                 1               1       Real Bed   \n",
+       "\n",
+       "                                         comodidades  cuota_deposito  \\\n",
+       "0  {Internet,\"Wireless Internet\",Kitchen,\"Free Pa...             0.0   \n",
+       "1  {TV,Internet,\"Wireless Internet\",Kitchen,\"Free...             0.0   \n",
+       "2  {TV,Internet,\"Wireless Internet\",Kitchen,\"Free...             0.0   \n",
+       "3  {Internet,\"Wireless Internet\",Kitchen,\"Free Pa...             0.0   \n",
+       "4  {\"Wireless Internet\",Kitchen,\"Free Parking on ...             0.0   \n",
+       "\n",
+       "   cuota_limpieza  precio  \n",
+       "0             0.0   110.0  \n",
+       "1             0.0    45.0  \n",
+       "2             0.0    55.0  \n",
+       "3            20.0    52.0  \n",
+       "4            15.0    85.0  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e71b260d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Debemos modificar la columna para extraer tokens, esta vez en palabras que son clave\n",
+    "# Cambiamos la columna de object a string para convertirlo a misnuscula\n",
+    "datos['descripcion_local'] = datos['descripcion_local'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5c2ec870",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>evaluacion_general</th>\n",
+       "      <th>experiencia_local</th>\n",
+       "      <th>max_hospedes</th>\n",
+       "      <th>descripcion_local</th>\n",
+       "      <th>descripcion_vecindad</th>\n",
+       "      <th>cantidad_baños</th>\n",
+       "      <th>cantidad_cuartos</th>\n",
+       "      <th>cantidad_camas</th>\n",
+       "      <th>modelo_cama</th>\n",
+       "      <th>comodidades</th>\n",
+       "      <th>cuota_deposito</th>\n",
+       "      <th>cuota_limpieza</th>\n",
+       "      <th>precio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>this clean and comfortable one bedroom sits ri...</td>\n",
+       "      <td>Lower Queen Anne is near the Seattle Center (s...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>{Internet,\"Wireless Internet\",Kitchen,\"Free Pa...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>our century old upper queen anne house is loca...</td>\n",
+       "      <td>Upper Queen Anne is a really pleasant, unique ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futon</td>\n",
+       "      <td>{TV,Internet,\"Wireless Internet\",Kitchen,\"Free...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cozy room in two-bedroom apartment along the l...</td>\n",
+       "      <td>The convenience of being in Seattle but on the...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futon</td>\n",
+       "      <td>{TV,Internet,\"Wireless Internet\",Kitchen,\"Free...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>very lovely and cozy room for one. convenientl...</td>\n",
+       "      <td>Ballard is lovely, vibrant and one of the most...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pull-out Sofa</td>\n",
+       "      <td>{Internet,\"Wireless Internet\",Kitchen,\"Free Pa...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>the “studio at mibbett hollow' is in a beautif...</td>\n",
+       "      <td>--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Real Bed</td>\n",
+       "      <td>{\"Wireless Internet\",Kitchen,\"Free Parking on ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   evaluacion_general experiencia_local  max_hospedes  \\\n",
+       "0                10.0                --             1   \n",
+       "1                10.0                --             1   \n",
+       "2                10.0                --             1   \n",
+       "3                10.0                --             1   \n",
+       "4                10.0                --             1   \n",
+       "\n",
+       "                                   descripcion_local  \\\n",
+       "0  this clean and comfortable one bedroom sits ri...   \n",
+       "1  our century old upper queen anne house is loca...   \n",
+       "2  cozy room in two-bedroom apartment along the l...   \n",
+       "3  very lovely and cozy room for one. convenientl...   \n",
+       "4  the “studio at mibbett hollow' is in a beautif...   \n",
+       "\n",
+       "                                descripcion_vecindad  cantidad_baños  \\\n",
+       "0  Lower Queen Anne is near the Seattle Center (s...               1   \n",
+       "1  Upper Queen Anne is a really pleasant, unique ...               1   \n",
+       "2  The convenience of being in Seattle but on the...               1   \n",
+       "3  Ballard is lovely, vibrant and one of the most...               1   \n",
+       "4                                                 --               1   \n",
+       "\n",
+       "   cantidad_cuartos  cantidad_camas    modelo_cama  \\\n",
+       "0                 1               1       Real Bed   \n",
+       "1                 1               1          Futon   \n",
+       "2                 1               1          Futon   \n",
+       "3                 1               1  Pull-out Sofa   \n",
+       "4                 1               1       Real Bed   \n",
+       "\n",
+       "                                         comodidades  cuota_deposito  \\\n",
+       "0  {Internet,\"Wireless Internet\",Kitchen,\"Free Pa...             0.0   \n",
+       "1  {TV,Internet,\"Wireless Internet\",Kitchen,\"Free...             0.0   \n",
+       "2  {TV,Internet,\"Wireless Internet\",Kitchen,\"Free...             0.0   \n",
+       "3  {Internet,\"Wireless Internet\",Kitchen,\"Free Pa...             0.0   \n",
+       "4  {\"Wireless Internet\",Kitchen,\"Free Parking on ...             0.0   \n",
+       "\n",
+       "   cuota_limpieza  precio  \n",
+       "0             0.0   110.0  \n",
+       "1             0.0    45.0  \n",
+       "2             0.0    55.0  \n",
+       "3            20.0    52.0  \n",
+       "4            15.0    85.0  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0ecc8787",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"built, run and supported by seattle tech and start up veterans, grokhome's focus is to create a supportive environment for smart people working on interesting projects, start ups and more. this listing is an upper bunk, in a 2-person shared room. *note: this fall, there will be major renovations happening on one kitchen and bathroom at a time. there will always be two other working kitchens and two working bathrooms in the house. we'll work to minimize the impact these renovations have on your stay. **this listing is only available to those working in the tech/science space. live in a hacker house, and immerse yourself in the seattle tech scene. you can expect to be surrounded by smart people solving big problems or working on something fun. we have frequent demo nights, and love when our guests share something they are passionate about. if you're new to the city, our deep ties to the seattle tech scene can help you get involved. expand your network, develop your ideas, and learn somet\""
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vemos un ejemplo de un registro sobre que caracteres se pueden eliminar\n",
+    "datos['descripcion_local'][3169]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "78ae9324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remplazamos los caracteres excepto letraz minusculas y mayusculas, \"-\" (guión) y \"'\"(coma simple)\n",
+    "datos['descripcion_local'] = datos['descripcion_local'].str.replace(r\"[^a-zA-Z0-9\\-\\']\",' ', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f6f6847",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       this clean and comfortable one bedroom sits ri...\n",
+       "1       our century old upper queen anne house is loca...\n",
+       "2       cozy room in two-bedroom apartment along the l...\n",
+       "3       very lovely and cozy room for one  convenientl...\n",
+       "4       the  studio at mibbett hollow' is in a beautif...\n",
+       "                              ...                        \n",
+       "3813    beautiful craftsman home in the historic wedgw...\n",
+       "3814    located in a very easily accessible area of se...\n",
+       "3815    this home is fully furnished and available wee...\n",
+       "3816    this business-themed modern home features    h...\n",
+       "3817    this welcoming home is in the quiet residentia...\n",
+       "Name: descripcion_local, Length: 3818, dtype: object"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos['descripcion_local']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "74cb1c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminamos los guiones (-) que no tengan nada a la izquierda o derecha\n",
+    "datos['descripcion_local'] = datos['descripcion_local'].str.replace(r'(?<!\\w)-(?!\\w)',' ', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "48466ce2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    this clean and comfortable one bedroom sits ri...\n",
+       "1    our century old upper queen anne house is loca...\n",
+       "2    cozy room in two-bedroom apartment along the l...\n",
+       "3    very lovely and cozy room for one  convenientl...\n",
+       "4    the  studio at mibbett hollow' is in a beautif...\n",
+       "Name: descripcion_local, dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos['descripcion_local'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e28fcaa5",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
